--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
-agp = "8.11.1"
+agp = "8.12.0"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "36"
 androidx-activityCompose = "1.10.1"
 androidx-core-ktx = "1.16.0"
-androidx-espresso-core = "3.6.1"
+androidx-espresso-core = "3.7.0"
 androidx-lifecycle = "2.9.1"
-androidx-test-junit = "1.2.1"
+androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.1.2"
-compose-multiplatform = "1.9.0-alpha03"
+compose-multiplatform = "1.9.0-beta01"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
-ktor = "3.2.2"
+ktor = "3.2.3"
 sqldelight = "2.1.0"
 sqljs = "1.8.0"
 webpack = "9.1.0"
 koin = "4.1.0"
 kotlinx-datetime = "0.7.1"
-coil = "3.2.0"
+coil = "3.3.0"
 kotlin-atomicfu = "0.29.0"
 maven-publish = "0.34.0"
 binary-compatibility-validator = "0.18.1"
