--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidx-lifecycle = "2.9.1"
 androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.1.2"
-compose-multiplatform = "1.9.0-beta01"
+compose-multiplatform = "1.9.0-alpha02"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
