--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,15 @@ android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "36"
 androidx-activityCompose = "1.10.1"
-androidx-core-ktx = "1.16.0"
+androidx-core-ktx = "1.17.0"
 androidx-espresso-core = "3.7.0"
 androidx-lifecycle = "2.9.1"
 androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.1.2"
-compose-multiplatform = "1.9.0-alpha02"
+compose-multiplatform = "1.9.0-beta01"
 junit = "4.13.2"
-kotlin = "2.2.0"
+kotlin = "2.2.10"
 kotlinx-coroutines = "1.10.2"
 ktor = "3.2.3"
 sqldelight = "2.1.0"
