--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidx-lifecycle = "2.9.3"
 androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.1.2"
-compose-multiplatform = "1.9.0-rc01"
+compose-multiplatform = "1.10.0-alpha01"
 junit = "4.13.2"
 kotlin = "2.2.10"
 kotlinx-coroutines = "1.10.2"
@@ -18,7 +18,7 @@ ktor = "3.2.3"
 sqldelight = "2.1.0"
 sqljs = "1.8.0"
 webpack = "9.1.0"
-koin = "4.1.0"
+koin = "4.1.1"
 kotlinx-datetime = "0.7.1"
 coil = "3.3.0"
 kotlin-atomicfu = "0.29.0"
