--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.13.0"
+agp = "8.13.1"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "36"
@@ -9,12 +9,12 @@ androidx-espresso-core = "3.7.0"
 androidx-lifecycle = "2.9.5"
 androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
-compose-adaptive = "1.1.2"
-compose-multiplatform = "1.10.0-alpha03"
+compose-adaptive = "1.2.0"
+compose-multiplatform = "1.10.0-beta01"
 junit = "4.13.2"
 kotlin = "2.2.21"
 kotlinx-coroutines = "1.10.2"
-ktor = "3.3.1"
+ktor = "3.3.2"
 slf4j = "2.0.17"
 sqldelight = "2.1.0"
 sqljs = "1.11.0"
