--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,14 +3,14 @@ agp = "8.13.1"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "36"
-androidx-activityCompose = "1.12.0"
+androidx-activityCompose = "1.12.1"
 androidx-core-ktx = "1.17.0"
 androidx-espresso-core = "3.7.0"
 androidx-lifecycle = "2.9.6"
 androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.2.0"
-compose-multiplatform = "1.10.0-beta02"
+compose-multiplatform = "1.10.0-rc01"
 junit = "4.13.2"
 kotlin = "2.2.21"
 kotlinx-coroutines = "1.10.2"
