Update compose-multiplatform version to 1.11.0-alpha01

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidx-lifecycle = "2.9.6"
 androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.2.0"
-compose-multiplatform = "1.10.0-rc02"
+compose-multiplatform = "1.11.0-alpha01"
 jsontree = "2.5.0"
 junit = "4.13.2"
 kotlin = "2.3.0"
