--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -25,5 +25,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material
-      - run: cd docs/mk-docs
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --force --config-file docs/mk-docs/mkdocs.yml
