--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.13.2"
 android-compileSdk = "36"
-android-minSdk = "26"
+android-minSdk = "24"
 android-targetSdk = "36"
 androidx-activityCompose = "1.12.3"
 androidx-core-ktx = "1.17.0"
@@ -11,6 +11,7 @@ androidx-test-junit = "1.3.0"
 accompanist = "0.37.3"
 compose-adaptive = "1.2.0"
 compose-multiplatform = "1.11.0-alpha01"
+desugar = "2.1.5"
 jsontree = "2.6.0"
 junit = "4.13.2"
 kotlin = "2.3.0"
@@ -33,6 +34,7 @@ binary-compatibility-validator = "0.18.1"
 dokka = "2.1.0"
 
 [libraries]
+desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
